--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 <!-- Start of first page -->
 <div data-role="page" id="home">
 
-	<div data-role="header">
+	<div data-role="header" data-position="fixed">
 		<h1>Friends of the U.S. Chamber</h1>
 	</div><!-- /header -->
 
@@ -156,7 +156,7 @@
         </ul>
 	</div><!-- /content -->
 
-	<div data-role="footer">
+	<div data-role="footer" data-position="fixed">
 		<h4>&copy; 2015</h4>
 	</div><!-- /footer -->
 </div><!-- /page -->
@@ -164,7 +164,7 @@
 <!-- Start of second page -->
 <div data-role="page" id="clickthru" data-add-back-btn="true">
 
-	<div data-role="header">
+	<div data-role="header" data-position="fixed">
 		<a href="#home" data-icon="arrow-l">Back</a>
         <h1>Friends of the U.S. Chamber</h1>
 	</div><!-- /header -->
@@ -173,7 +173,7 @@
 		
 	</div><!-- /content -->
 
-	<div data-role="footer">
+	<div data-role="footer" data-position="fixed">
 		<h4>&copy; 2015</h4>
 	</div><!-- /footer -->
 </div><!-- /page -->
