--- a/index.html
+++ b/index.html
@@ -84,6 +84,30 @@
 		}
 	});
 	
+	$(document).on('pageinit', '#send-txt', function() {
+		var options = new ContactFindOptions();
+        options.filter = "Ly";
+        var fields = ["displayName", "name"];
+        navigator.contacts.find(fields, onSuccess, onError, options);
+		
+		function onSuccess(contacts) {
+			for (var i = 0; i < contacts.length; i++) {
+				console.log("Display Name = " + contacts[i].displayName);
+				$("#contacts").append("<li>" + contacts[i].displayName + "</li>");
+			}
+			
+			$('#contacts').listview('refresh');
+		}
+
+		// onError: Failed to get the contacts
+
+		function onError(contactError) {
+			alert('onError!');
+		}
+
+		
+	});
+	
 	function showEmail(urlObj, options) {
 		var ID = urlObj.hash.replace( /.*ID=/, "" );
 
@@ -150,7 +174,7 @@
 <body>
 
 <!-- Start of first page -->
-<div data-role="page" id="home" data-theme="a">
+<div data-role="page" id="home">
 
 	<div data-role="header" data-position="fixed">
 		<h1>Friends of the U.S. Chamber</h1>
@@ -167,9 +191,9 @@
 </div><!-- /page -->
 
 <!-- Start of second page -->
-<div data-role="page" id="clickthru" data-add-back-btn="true" data-theme="a">
+<div data-role="page" id="clickthru" data-add-back-btn="true">
 
-	<div data-role="header" data-position="fixed" data-theme="b">
+	<div data-role="header" data-position="fixed">
 		
         <h1>Friends of the U.S. Chamber</h1>
 	</div><!-- /header -->
@@ -178,11 +202,40 @@
 		
 	</div><!-- /content -->
 
-	<div data-role="footer" data-position="fixed" data-theme="b">
-		<a href="#home" data-icon="arrow-l">Back</a>
+	<div data-role="footer" data-position="fixed">
         <h4>&copy; 2015</h4>
+        <div data-role="navbar">
+            <ul>
+                <li><a href="#back" data-icon="home">Back</a></li>
+                <li><a href="" data-icon="mail">Email</a></li>
+                <li><a href="#send-txt" data-icon="action">TXT</a></li>
+            </ul>
+        </div><!-- /navbar -->
 	</div><!-- /footer -->
 </div><!-- /page -->
+
+<div data-role="page" id="send-txt">
+	<div data-role="header" data-position="fixed">
+		
+        <h1>Friends of the U.S. Chamber</h1>
+	</div><!-- /header -->
+
+	<div data-role="main" class="ui-content">
+	    <ul id="contacts" data-role="listview" data-filter-placeholder="Search contacts..." data-filter="true">
+        </ul>
+		
+	</div><!-- /content -->
+
+	<div data-role="footer" data-position="fixed">
+        <h4>&copy; 2015</h4>
+        <div data-role="navbar">
+            <ul>
+                <li><a href="#back" data-icon="home">Back</a></li>
+            </ul>
+        </div><!-- /navbar -->
+	</div><!-- /footer -->
+</div><!-- /page -->
+
 
 </body>
 </html>
